Added files to file structure

--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Moo!</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Moo!</title>
-</head>
-
-<body>
-  <div id="moo"></div>
-  <!-- <script src="build/build.js"></script> -->
-</body>
-
+  <body>
+    <div id="moo"></div>
+  </body>
 </html>
